specs/001-typescript-to-zig-native/examples/valid/bool-literal.ts
const ready: boolean = true;

console.log(ready);
