specs/001-typescript-to-zig-native/examples/invalid/import-remote-noext.ts
import add from "https://example.com/math.js";

console.log(1);
